test/bad/backslash-in.c
int main(void)
{
	/* A backslash in the middle of a C source line should be an error. */
	printf("Hello " \ "world!\n");
}
